Fix filename scheme problems for UMS.

BUG:285900